<resources>
    <string name="app_name">MediCare App</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="or">OR</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="forget_password">Forget Password?</string>
    <string name="name">Name</string>
    <string name="time">Select your age range or type</string>
    <string name="Phone">Phone number</string>
    <string name="gander">Gender</string>
    <string name="Male">Male</string>
    <string name="Famale">Famale</string>
    <string name="problem">Write your problem</string>
    <string name="Continue">Continue</string>

    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mohamed_ayman">Mohamed Ayman</string>
    <string name="email">Email</string>
    <string name="demo_mail_gmail_com">demo.mail@gmail.com</string>
    <string name="hidden_password">***********</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="recover_password">Recover Password</string>
    <string name="mail_address_here">Mail Address Here</string>
    <string name="enter_the_email_address_associated_nwith_your_account">Enter the email address associated\nwith your account</string>
    <string name="description">For example, if a doctor is forced to treat a patient they strongly dislike – will they give more or less care to the patient? Furthermore, would they unknowingly withhold information simply because they do not like the patient.</string>
    <string name="numberPatient">+1000</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_new_specialist">Add New Specialist</string>
    <string name="add">Add</string>
    <string name="cardiology">Cardiology</string>
</resources>