<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reservationActivity"
    android:background="@color/tcolor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView


            android:layout_width="111dp"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="3dp"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:inputType="text"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_event_24"
            android:text="@string/time"
            android:textSize="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            />

        <LinearLayout
            android:id="@+id/bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_age1"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"

                android:background="@drawable/button_style"
                android:text="10+" />


            <Button
                android:id="@+id/btn_age2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="20+"
                android:background="@drawable/button_style"

                />

            <Button
                android:id="@+id/btn_age3"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="30+"
                android:background="@drawable/button_style"
                />

            <Button
                android:id="@+id/btn_age4"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="40+"
                android:background="@drawable/button_style"
                />

            <Button
                android:id="@+id/btn_age5"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="50+"
                android:background="@drawable/button_style"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_phone_in_talk_24"
            android:text="@string/Phone"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="phone"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_group_24"
            android:text="@string/gander"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:text="@string/Male"


                    />




                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Famale"


                    />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/problem"
            android:textSize="20dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="40dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edit_text_style"
            android:layout_marginLeft="16dp"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
            />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style"

            android:text="@string/Continue" />

    </LinearLayout>
</ScrollView>
