<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/mobile_login" />

            <TextView
                style="@style/textview_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail_address_here"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/enter_the_email_address_associated_nwith_your_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/demo_mail_gmail_com"
                app:boxStrokeWidth="1dp"
                app:startIconDrawable="@drawable/ic_baseline_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/login_button"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_background"
                android:elevation="15dp"
                android:gravity="center"
                android:text="@string/recover_password"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginBottom="100dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>